atualizacao das imagens no footer

--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
     </section>
     <div class="fixed-icons">
       <a href="https://www.gentilnegocios.com.br/" target="_blank"
-        ><img src="./_img/Gentil.png" alt="Gentil"
+        ><img src="_img/Gentil.png" alt="Gentil"
       /></a>
       <a href="https://central.gentilnegocios.com.br/" target="_blank"
-        ><img src="./_img/logo-tex.png" alt="tex"
+        ><img src="_img/logo-tex.png" alt="tex"
       /></a>
       <a href="https://gptw.com.br/" target="_blank"
-        ><img src="./_img/gptw.svg" alt="GPTW"
+        ><img src="_img/gptw.svg" alt="GPTW"
       /></a>
     </div>
 
