--- a/index.html
+++ b/index.html
@@ -118,13 +118,19 @@
     </section>
     <div class="fixed-icons">
       <a href="https://www.gentilnegocios.com.br/" target="_blank"
-        ><img src="_img/Gentil.png" alt="Gentil"
+        ><img
+          src="https://raw.githubusercontent.com/gentilnegocios/Assinatura/refs/heads/main/_img/Gentil.png"
+          alt="Gentil"
       /></a>
       <a href="https://central.gentilnegocios.com.br/" target="_blank"
-        ><img src="_img/logo-tex.png" alt="tex"
+        ><img
+          src="https://raw.githubusercontent.com/gentilnegocios/Assinatura/refs/heads/main/_img/logo-tex.png"
+          alt="tex"
       /></a>
       <a href="https://gptw.com.br/" target="_blank"
-        ><img src="_img/gptw.svg" alt="GPTW"
+        ><img
+          src="https://raw.githubusercontent.com/gentilnegocios/Assinatura/f5a4b3290de82a116bc0f8ffcce5e286feb6e084/_img/gptw.svg"
+          alt="GPTW"
       /></a>
     </div>
 
