--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <link href="style.css" rel="stylesheet" />
 
-    <title>Assinatura Gentil Negócios</title>
+    <title>Assinatura - Gentil Negócios</title>
   </head>
   <body>
     <section id="colaborador">
