Melhorias na imagem de assinatura 17.01.2025

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     id="label-nomeColaborador"
                     class="label"
                     for="nomeColaborador"
-                    >Nome do colaborador</label
+                    >Nome do Colaborador</label
                   >
                   <input
                     type="text"
@@ -98,7 +98,6 @@
               crossorigin="anonymous"
               class="img-fluid"
               id="assinaturaTemplate"
-              style="margin-top: 2%"
             />
           </div>
           <!-- Download da imagem -->
