--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
     function setClip() {
       ctx.globalCompositeOperation = "destination-in";
       ctx.globalCompositeOperation = "source-over";
-      ctx.font = "bolder 30.76px  Montserrat, sans-serif";
+      ctx.font = "bolder 25px  Montserrat, sans-serif";
       ctx.textAlign = "left";
-      ctx.fillStyle = "black";
+      ctx.fillStyle = "white";
     }
 
     //Função para repor imagem após edição
@@ -216,7 +216,7 @@
     function setText(textColaborador, setor, telefoneColaborador) {
       setClip();
       ctx.textBaseline = "hanging"; //Mostra o texto sendo escrito na tela em tempo real
-      ctx.fillText(textColaborador, 270, 62); //Definição de onde o texto ira iniciar nas coordenadas X e Y
+      ctx.fillText(textColaborador, 142, 62); //Definição de onde o texto ira iniciar nas coordenadas X e Y
       setSetor(setor); //Configuração do setor/segundo formulário
       setTelefone(telefoneColaborador);
     }
@@ -225,27 +225,27 @@
     function setSetor(setor) {
       ctx.globalCompositeOperation = "destination-in";
       ctx.globalCompositeOperation = "source-over";
-      ctx.font = "30.76px Montserrat, sans-serif";
+      ctx.font = "25px Montserrat, sans-serif";
       ctx.textAlign = "left";
-      ctx.fillStyle = "black";
+      ctx.fillStyle = "white";
       ctx.textBaseline = "hanging";
-      ctx.fillText(setor, 270, 100); //Definição de onde o texto ira iniciar nas coordenadas X e Y
+      ctx.fillText(setor, 142, 100); //Definição de onde o texto ira iniciar nas coordenadas X e Y
     }
 
     //Configuração de campo de telefone
     function setTelefone(telefoneColaborador) {
       ctx.globalCompositeOperation = "destination-in";
       ctx.globalCompositeOperation = "source-over";
-      ctx.font = "21px Montserrat, sans-serif";
+      ctx.font = "13px Montserrat, sans-serif";
       ctx.textAlign = "left";
-      ctx.fillStyle = "black";
+      ctx.fillStyle = "white";
       ctx.textBaseline = "hanging";
       telefoneColaborador = telefoneColaborador.replace(/\D/g, ""); //Remove tudo o que não é dígito
       telefoneColaborador = telefoneColaborador.replace(
         /^(\d{2})(\d{5})(\d{4}).*/,
         "($1) $2-$3"
       ); //Adiciona o parentese e hífen ao número
-      ctx.fillText(telefoneColaborador, 440, 137); //Definição de onde o texto ira iniciar nas coordenadas X e Y
+      ctx.fillText(telefoneColaborador, 240, 143); //Definição de onde o texto ira iniciar nas coordenadas X e Y
     }
 
     //Máscara de telefone
