feat: Mudança da opção de IAF para Inteligência de Mercado e Performance

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   <option>Faturamento</option>
                   <option>Financeiro</option>
                   <option>Gente e Cultura</option>
-                  <option>IAF</option>
+                  <option>Inteligência de Mercado e Performance</option>
                   <option>Jurídico</option>
                   <option>Logística</option>
                   <option>Marketing</option>
@@ -231,7 +231,6 @@
     function setTelefone(telefoneColaborador) {
 
     if (!telefoneColaborador.trim()) return;
-
     ctx.globalCompositeOperation = "destination-in";
     ctx.globalCompositeOperation = "source-over";
     ctx.font = "13px Montserrat, sans-serif";
