feat: ajuste no campo de setores

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   <option>Faturamento</option>
                   <option>Financeiro</option>
                   <option>Gente e Cultura</option>
-                  <option>Inteligência de Mercado e Performance</option>
+                  <option>Inteligência em Vendas</option>
                   <option>Jurídico</option>
                   <option>Logística</option>
                   <option>Marketing</option>
