--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="https://github.com/gentilnegocios/Assinatura/blob/main/_img/favicon-tex.png" />
 
     <!-- Bootstrap CSS -->
+    <!-- Esse é um comentario apenas para o teste do novo revisor de codigo -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
