feat: Correção do campo Departamento Pessoal

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   <option>Comercial</option>
                   <option>Contabilidade</option>
                   <option>Controladoria</option>
-                  <option>Departameto Pessoal</option>
+                  <option>Departamento Pessoal</option>
                   <option>Diretoria</option>
                   <option>Estoque</option>
                   <option>Faturamento</option>
