feat: Adição do setor Planejamento Estratégico

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                   <option>Logística</option>
                   <option>Marketing</option>
                   <option>Núcleo de Excelência</option>
+                  <option>Planejamento Estratégico</option>
                   <option>Recepção</option>
                   <option>Recursos Humanos</option>
                   <option>Segurança</option>
